force-app/main/default/objects/CWB__c/CWB__c.object-meta.xml
<CustomObject>
    <description>To capture the details of the components that are build to achieve the requirements. This will be accessible only for the Sys.Admins.</description>
    <label>CWB</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CWB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CWB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>