force-app/main/default/objects/CWB__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API Name. Important for Integration/Apex/Visual Force/Process Builder</inlineHelpText>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>