force-app/main/default/objects/CWB__c/fields/Available_in_SIT1__c.field-meta.xml
<CustomField>
    <fullName>Available_in_SIT1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the component been moved to SIT1 from the Developer Sandbox.</inlineHelpText>
    <label>Available in SIT1</label>
    <type>Checkbox</type>
</CustomField>