force-app/main/default/objects/CWB__c/fields/Component_Deactivated_in__c.field-meta.xml
<CustomField>
    <fullName>Component_Deactivated_in__c</fullName>
    <inlineHelpText>Mention in which environment(s) has the component been deactivated.</inlineHelpText>
    <label>Component Deactivated in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Dev1</fullName>
            </value>
            <value>
                <fullName>FiTest</fullName>
            </value>
            <value>
                <fullName>Level1</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Pre-Prod</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>SIT1</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>