force-app/main/default/objects/CWB__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <inlineHelpText>Data Type of the created field.</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Component__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Auto Number</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Roll-Up Summary</fullName>
            </value>
            <value>
                <fullName>Lookup Relationship</fullName>
            </value>
            <value>
                <fullName>Master-Detail Relationship</fullName>
            </value>
            <value>
                <fullName>External Lookup Relationship</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date/Time</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Geolocation</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Text Area (Long)</fullName>
            </value>
            <value>
                <fullName>Text Area (Rich)</fullName>
            </value>
            <value>
                <fullName>Text (Encrypted)</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Outbound Message</fullName>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
            <value>
                <fullName>Email Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>