force-app/main/default/objects/CWB__c/fields/Deployed_to_Production__c.field-meta.xml
<CustomField>
    <fullName>Deployed_to_Production__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the component been moved to Production?</inlineHelpText>
    <label>Deployed to Production</label>
    <type>Checkbox</type>
</CustomField>