force-app/main/default/objects/CWB__c/fields/Developed_In__c.field-meta.xml
<CustomField>
    <fullName>Developed_In__c</fullName>
    <inlineHelpText>Mention the initial sandbox in which the component was developed before moving to SIT/Pre-Prod.</inlineHelpText>
    <label>Developed In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev1</fullName>
            </value>
            <value>
                <fullName>Level1</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Sit1</fullName>
            </value>
            <value>
                <fullName>FiTest</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Route</fullName>
            </value>
            <value>
                <fullName>Sit</fullName>
            </value>
            <value>
                <fullName>AEQCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>