force-app/main/default/objects/CWB__c/fields/Downstream_Systems__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Systems__c</fullName>
    <inlineHelpText>The systems to which the data in this field will be sent.</inlineHelpText>
    <label>Downstream Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMEX (AEQCC)</fullName>
            </value>
            <value>
                <fullName>Aquire (iFly)</fullName>
            </value>
            <value>
                <fullName>QBD</fullName>
            </value>
            <value>
                <fullName>iDeal</fullName>
            </value>
            <value>
                <fullName>CTR/IPR</fullName>
            </value>
            <value>
                <fullName>Tradesite</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>Executive Summary in Salesforce</fullName>
            </value>
            <value>
                <fullName>iCargo</fullName>
            </value>
            <value>
                <fullName>Scorpio</fullName>
            </value>
            <value>
                <fullName>AEQCC</fullName>
                <isActive>false</isActive>
                <label>AEQCC</label>
            </value>
            <value>
                <fullName>Aquire</fullName>
                <isActive>false</isActive>
                <label>Aquire</label>
            </value>
            <value>
                <fullName>CPR/IPR</fullName>
                <isActive>false</isActive>
                <label>CPR/IPR</label>
            </value>
            <value>
                <fullName>IPR Eagle</fullName>
                <isActive>false</isActive>
                <label>IPR Eagle</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Pricing/distribution</fullName>
                <isActive>false</isActive>
                <label>Pricing/distribution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>