force-app/main/default/objects/CWB__c/fields/Field_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Business term definition of this field. (Can be the same as the description give during field creation)</inlineHelpText>
    <label>Field Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>