force-app/main/default/objects/CWB__c/fields/JIRA_number__c.field-meta.xml
<CustomField>
    <fullName>JIRA_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JIRA number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>