force-app/main/default/objects/CWB__c/fields/Mandatory_Field__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the field mandatory on any of the page layouts or at the data base level?
Give more details on the &apos;Other Comments&apos; field.</inlineHelpText>
    <label>Mandatory Field?</label>
    <type>Checkbox</type>
</CustomField>