force-app/main/default/objects/CWB__c/fields/Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any other comment that needs to be mentioned in relation to this component.</inlineHelpText>
    <label>Other Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>