force-app/main/default/objects/CWB__c/fields/Parent_CWB__c.field-meta.xml
<CustomField>
    <fullName>Parent_CWB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent CWB</label>
    <referenceTo>CWB__c</referenceTo>
    <relationshipLabel>CWB Changes</relationshipLabel>
    <relationshipName>CWBupdates</relationshipName>
    <type>Lookup</type>
</CustomField>