force-app/main/default/objects/CWB__c/fields/Project_Team__c.field-meta.xml
<CustomField>
    <fullName>Project_Team__c</fullName>
    <inlineHelpText>The project that required the field.</inlineHelpText>
    <label>Project Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>SME Proposition</fullName>
            </value>
            <value>
                <fullName>Tradesite</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Corporate Schemes (Loyalty)</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>