force-app/main/default/objects/CWB__c/fields/Related_to_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Object__c</fullName>
    <label>Related to (Object)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account Classifications</fullName>
            </value>
            <value>
                <fullName>Account Contact Relation</fullName>
            </value>
            <value>
                <fullName>Account Eligibility Log</fullName>
            </value>
            <value>
                <fullName>Account Ownership</fullName>
            </value>
            <value>
                <fullName>Account Relationships</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Agency Performance</fullName>
            </value>
            <value>
                <fullName>Airport City</fullName>
            </value>
            <value>
                <fullName>Approval Matrix</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Campaign Channel</fullName>
            </value>
            <value>
                <fullName>Campaign Expense</fullName>
            </value>
            <value>
                <fullName>Campaign Member</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Charter Flight Information</fullName>
            </value>
            <value>
                <fullName>Competitor Information</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contract &amp; Agreement</fullName>
            </value>
            <value>
                <fullName>Contract Fare Discount</fullName>
            </value>
            <value>
                <fullName>Corporate Scheme</fullName>
            </value>
            <value>
                <fullName>CWB</fullName>
            </value>
            <value>
                <fullName>DataStage</fullName>
            </value>
            <value>
                <fullName>DRA</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Fare</fullName>
            </value>
            <value>
                <fullName>Fare Discount Guidelines</fullName>
            </value>
            <value>
                <fullName>Frequent Flyer Information</fullName>
            </value>
            <value>
                <fullName>Justification</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>