force-app/main/default/objects/CWB__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Mention the sprint in which the component is deployed</inlineHelpText>
    <label>Sprint</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>