force-app/main/default/objects/CWB__c/fields/Track_History__c.field-meta.xml
<CustomField>
    <fullName>Track_History__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the field is tracked via history tracking.</inlineHelpText>
    <label>Track History</label>
    <type>Checkbox</type>
</CustomField>