force-app/main/default/objects/CWB__c/recordTypes/New_CWB.recordType-meta.xml
<RecordType>
    <fullName>New_CWB</fullName>
    <active>true</active>
    <description>To create a New CWB</description>
    <label>New CWB</label>
</RecordType>