force-app/main/default/objects/CWB__c/recordTypes/Update_to_a_CWB.recordType-meta.xml
<RecordType>
    <fullName>Update_to_a_CWB</fullName>
    <active>true</active>
    <description>to make an update to an existing CWB</description>
    <label>Update to a CWB</label>
</RecordType>