force-app/main/default/objects/CWB__c/validationRules/Mandatory_other_comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_other_comments</fullName>
    <active>true</active>
    <description>To ensure the comments field has necessary information if a validation component.</description>
    <errorConditionFormula>AND(ISPICKVAL(Component__c,&quot;Validation Rules&quot;), ISBLANK( Other_Comments__c ))</errorConditionFormula>
    <errorDisplayField>Other_Comments__c</errorDisplayField>
    <errorMessage>Please fill the details of the validation rule.</errorMessage>
</ValidationRule>