force-app/main/default/objects/CWB__c/listViews/Account_Fields.listView-meta.xml
<ListView>
    <fullName>Account_Fields</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>JIRA_number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_to_Object__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>Account Fields</label>
</ListView>