force-app/main/default/objects/CWB__c/listViews/Advocacy_Queue_High_CWB.listView-meta.xml
<ListView>
    <fullName>Advocacy_Queue_High_CWB</fullName>
    <filterScope>Queue</filterScope>
    <label>CCC Advocacy Queue-High</label>
    <queue>Advocacy_Queue_High</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>