force-app/main/default/objects/CWB__c/listViews/Advocacy_Queue_Low_CWB.listView-meta.xml
<ListView>
    <fullName>Advocacy_Queue_Low_CWB</fullName>
    <filterScope>Queue</filterScope>
    <label>CCC Advocacy Queue-Low</label>
    <queue>Advocacy_Queue_Low</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>