force-app/main/default/objects/CWB__c/listViews/Advocacy_Queue_Medium_CWB.listView-meta.xml
<ListView>
    <fullName>Advocacy_Queue_Medium_CWB</fullName>
    <filterScope>Queue</filterScope>
    <label>CCC Advocacy Queue-Medium</label>
    <queue>Advocacy_Queue_Medium</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>