force-app/main/default/objects/CWB__c/listViews/Airports_Queue_SLA_CWB.listView-meta.xml
<ListView>
    <fullName>Airports_Queue_SLA_CWB</fullName>
    <filterScope>Queue</filterScope>
    <label>CCC Airports Queue-SLA</label>
    <queue>Airports_Queue_SLA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>