force-app/main/default/objects/CWB__c/listViews/Apex.listView-meta.xml
<ListView>
    <fullName>Apex</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Component__c</columns>
    <columns>Related_to_Object__c</columns>
    <columns>Deployed_to_Production__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component__c</field>
        <operation>equals</operation>
        <value>Apex Classes,Triggers</value>
    </filters>
    <label>Apex</label>
</ListView>