force-app/main/default/objects/CWB__c/listViews/Approval_Processes.listView-meta.xml
<ListView>
    <fullName>Approval_Processes</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Related_to_Object__c</columns>
    <columns>Deployed_to_Production__c</columns>
    <columns>Component_Deactivated_in__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component__c</field>
        <operation>equals</operation>
        <value>Approval Processes</value>
    </filters>
    <label>Approval Processes</label>
</ListView>