force-app/main/default/objects/CWB__c/listViews/Baggage_Damaged_Queue_Medium_CWB.listView-meta.xml
<ListView>
    <fullName>Baggage_Damaged_Queue_Medium_CWB</fullName>
    <filterScope>Queue</filterScope>
    <label>CCC Baggage Damaged Queue-Medium</label>
    <queue>Baggage_Damaged_Queue_Medium</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>