force-app/main/default/objects/CWB__c/listViews/Baggage_Delayed_Queue_High_CWB.listView-meta.xml
<ListView>
    <fullName>Baggage_Delayed_Queue_High_CWB</fullName>
    <filterScope>Queue</filterScope>
    <label>CCC Baggage Delayed Queue-High</label>
    <queue>Baggage_Delayed_Queue_High</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>